<resources>
    <string name="app_name">ShowProfileActivity</string>
    <string name="full_name">Full Name</string>
    <string name="nickname">Nickname</string>
    <string name="bio">Bio</string>
    <string name="phone">Phone</string>
    <string name="age">Age</string>
    <string name="years">%1$s years old</string>
    <string name="gender">Gender</string>
    <string name="genderMale">Male</string>
    <string name="genderFemale">Female</string>
    <string name="genderOther">Other</string>
    <string name="location">Location</string>
    <string name="my_sports">My sports</string>
    <string name="my_courts">My courts</string>
    <string name="sport_tennis">Tennis</string>
    <string name="sport_basketball">Basketball</string>
    <string name="sport_football">Football</string>
    <string name="sport_volleyball">Volleyball</string>
    <string name="sport_golf">Golf</string>
    <string name="add_sport">Add</string>
    <string name="modify_profile">Modify</string>
    <string name="save_profile">Save</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="save_sport">Save selected sports</string>
    <string name="select_your_sports">Select your sports</string>
    <string name="my_rating">My rating</string>
</resources>