<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fullscreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="parent" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="20dp">

            <ImageView
                android:id="@+id/imageUserProfile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:src="@drawable/user_profile" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/camera"
                android:layout_gravity="end"
                app:tint="@color/secondary" />
        </FrameLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp" >

                <EditText
                    android:id="@+id/editTextFullName"

                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/full_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    tools:layout_editor_absoluteX="115dp"
                    tools:layout_editor_absoluteY="74dp" />

                <EditText
                    android:id="@+id/editTextNickname"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/nickname"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@android:color/secondary_text_light"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/editTextBio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/bio"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <EditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:minHeight="48dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/phone"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <EditText
                    android:id="@+id/editTextAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/age"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <EditText
                    android:id="@+id/editTextLocation"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/location"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:paddingBottom="10dp"
                        android:text="@string/my_rating"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/black" />

                    <me.zhanghai.android.materialratingbar.MaterialRatingBar
                        android:id="@+id/ratingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:rating="3.5"
                        android:numStars="5"
                        style="@style/Widget.MaterialRatingBar.RatingBar"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textMySports"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/my_sports"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold|italic" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipTennis"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/sport_tennis"
                            app:chipIcon="@drawable/tennis_ball"
                            app:chipIconVisible="true" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipBasketball"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/sport_basketball"
                            app:chipIcon="@drawable/basketball_ball"
                            app:chipIconVisible="true" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipFootball"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/sport_football"
                            app:chipIcon="@drawable/football_ball"
                            app:chipIconVisible="true" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipVolleyball"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/sport_volleyball"
                            app:chipIcon="@drawable/volleyball_ball"
                            app:chipIconVisible="true" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipGolf"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/sport_golf"
                            app:chipIcon="@drawable/golf"
                            app:chipIconVisible="true" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipAdd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/add_sport"
                            app:chipIcon="@drawable/plus_circle"
                            app:chipIconVisible="true" />

                    </LinearLayout>
                </HorizontalScrollView>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>